# kodbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  config.toml.sample  secrets.toml.sample  welcome.msg
src/: config.rs  ebas.rs  main.rs  secrets.rs  state.rs  welcome.rs
