[package]
name = "kodbot"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = "1.0"
serde_json = "1.0"
twilight-http = "0.15"
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
vesper = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
time = "0.3"
